Add MockWebServer UTs

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     testImplementation "com.jakewharton.threetenabp:threetenabp:$test_threetenabp_version"
     // Use fake "Calls"
     testImplementation "com.squareup.retrofit2:retrofit-mock:$test_retrofit_mock_version"
+    testImplementation 'com.squareup.okhttp3:mockwebserver:4.8.1'
 
     // Android tests
     androidTestImplementation "androidx.test:runner:$android_test_runner_version"
